--- a/backend/package.json
+++ b/backend/package.json
@@ -46,6 +46,7 @@
     "dotenv": "^16.1.4",
     "eslint": "^8.42.0",
     "express": "^4.18.2",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.4",
     "nodemailer": "^6.9.3",
